fix: HIGH priority fixes from Eszter review — brute force protection, null guards, storno validation, transfer balance, AML, decade closing
Backend (13 files, +236 lines):
- WorkerService: Brute force védelem (max 5 próba, 15 perc lock) #16
- ExchangeRate: getBuyRateForAmount/getSellRateForAmount null guard #4
- StornoService: isReversed/isReversal check BEFORE approval logic #8
- TransferService: CashBalance frissítés receive()-nél + Objects.equals #10
- DailyClosingService: Dekád zárás audit record + duplicate rate snapshot prevention #6,#7
- HandlingFeeService: null check, legacy HALF_UP kerekítés + napi tranzakciószám
- AmlService: trim().isEmpty() konzisztens validáció #5
- CashBalanceService: adjustBalance audit logolás #9
- DailySessionService: session state validation javítás
- DenominationConfigService: null guard
- TransactionRepository: countBy query + sumDailyHandlingFees
- Transaction entity: multi-line helper bővítés
- Notification entity: @Builder.Default

Compile: BUILD SUCCESS, TSC: 0 error